update yml file for archiving report

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -43,3 +43,10 @@ jobs:
       # Step 5: Run the Selenium TestNG test suite
       - name: Run Selenium Tests
         run: mvn test
+      
+      # Step 5: Archive the Surefire reports
+      - name: Archive Surefire reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: surefire-reports
+          path: target/surefire-reports
