--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -38,13 +38,17 @@ jobs:
 
       # Step 4: Build the project with Maven
       - name: Build with Maven
-        run: mvn clean install
+        run: |
+            mvn clean 
+            mvn install -DskipTests
+            echo "Build completed"
         continue-on-error: true
 
       # Step 5: Run the Selenium TestNG test suite
       - name: Run Selenium Tests
-        run: mvn test
-        continue-on-error: true
+        run: |
+            mvn test || { echo 'Tests failed'; exit 1; }
+        continue-on-error: false
       
       # Step 5: Archive the Surefire reports
       - name: Archive Surefire reports
