updating yml file for arrchiving screenshots

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -55,4 +55,11 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: extent-reports
-          path: ExtentReports/**
+          path: ExtentReports/extentReports.html
+          
+      # Step 6: Archive Screenshots
+      - name: Archive Screenshots
+        uses: actions/upload-artifact@v3
+        with:
+          name: Screenshots
+          path: Screenshots/**
