update name for yml file

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -1,6 +1,6 @@
 # .github/workflows/selenium-docker.yml
 
-name: Run Selenium Tests in Docker
+name: BudgetBaker Automation Suite Pipeline Execution
 
 on: 
   push:
